Fix width property in login-wrapper and add z-index

--- a/style.css
+++ b/style.css
@@ -996,7 +996,9 @@ main {
   /* background-color: #e6e3e5;
   padding: 40px 20px;
   border-radius: 50px; */
-  width: 250p
+  width: 250px;
+  z-index: -10000;
+  
 }
 /* --------- */
 main {
